feat: Implement use cases for saving and validating class diagrams and workflows
- Add SaveClassDiagramUseCase to persist class diagram compilation units with upsert semantics.
- Add SaveWorkflowUseCase to persist workflow compilation units with upsert semantics.
- Add ValidateWorkflowUseCase for synchronous validation of workflow compilation units against context conditions.
- Introduce value objects ClassDiagramId and WorkflowId for strongly-typed identifiers.
- Create ConformanceReport and IncarnationMapping for conformance checking results.
- Implement SymbolTable for resolving symbols in workflow compilation units.
- Add tests for all new use cases and value objects, ensuring correct functionality and error handling.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,11 @@ environment:
 
 dependencies:
   bpmn_domain:
-    git:
-      url: https://github.com/staylorx/bpmn_domain.git
-      ref: main
+    path: ../bpmn_domain
   equatable: ^2.0.8
   fpdart: ^1.2.0
 
 dev_dependencies:
   lints: ^6.0.0
+  mocktail: ^1.0.4
   test: ^1.25.6
